--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <release>11</release>  <!--or <release>10</release>-->
                 </configuration>
             </plugin>
             <plugin>
